--- a/european.html
+++ b/european.html
@@ -21,9 +21,36 @@
     <title>European Cuisines</title>
   </head>
   <body>
-    <?php
-      include('header.php');
-    ?>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+              <a class="navbar-brand" href="#">World Cuisine</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="index.html#about">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="index.html#option" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Resep
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="indonesian.html">Indonesian Cuisines</a></li>
+                      <li><a class="dropdown-item" href="european.html">European Cuisines</a></li>
+                  </ul>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="index.html#contact">Contact</a>
+                  </li>
+              </ul>
+              </div>
+          </div>
+    </nav>
 
     <div class="jumbotron jumbotron-fluid cek pt-5">
       <div class="container mt-5">  
@@ -42,7 +69,7 @@
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
-            <a href="pizza.php"><img src="img/eur/pizza.jpg" class="card-img-top" alt="pizza"></a>
+            <a href="pizza.html"><img src="img/eur/pizza.jpg" class="card-img-top" alt="pizza"></a>
             <div class="card-body">
               <p class="card-text">Pizza</p>
             </div>
@@ -50,7 +77,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="crepes.php"><img src="img/eur/crepes.jpg" class="card-img-top" alt="crepes"></a>
+            <a href="crepes.html"><img src="img/eur/crepes.jpg" class="card-img-top" alt="crepes"></a>
             <div class="card-body">
               <p class="card-text">Crepes</p>
             </div>
@@ -58,7 +85,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="frittes.php"><img src="img/eur/frittes.jpg" class="card-img-top" alt="frittes"></a>
+            <a href="frittes.html"><img src="img/eur/frittes.jpg" class="card-img-top" alt="frittes"></a>
             <div class="card-body">
               <p class="card-text">Frittes</p>
             </div>
@@ -69,7 +96,7 @@
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
-            <a href="currywurst.php"><img src="img/eur/currywurst.jpg" class="card-img-top" alt="currywurst"></a>
+            <a href="currywurst.html"><img src="img/eur/currywurst.jpg" class="card-img-top" alt="currywurst"></a>
             <div class="card-body">
               <p class="card-text">Currywurst</p>
             </div>
@@ -77,7 +104,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="kroketten.php"><img src="img/eur/kroketten.jpg" class="card-img-top" alt="kroketten"></a>
+            <a href="kroketten.html"><img src="img/eur/kroketten.jpg" class="card-img-top" alt="kroketten"></a>
             <div class="card-body">
               <p class="card-text">Kroketten</p>
             </div>
@@ -85,7 +112,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="spaghetti.php"><img src="img/eur/spaghetti.jpeg" class="card-img-top" alt="spaghetti"></a>
+            <a href="spaghetti.html"><img src="img/eur/spaghetti.jpeg" class="card-img-top" alt="spaghetti"></a>
             <div class="card-body">
               <p class="card-text">Spaghetti</p>
             </div>
@@ -96,7 +123,7 @@
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
-            <a href="pretzel.php"><img src="img/eur/pretzel.jpg" class="card-img-top" alt="pretzel"></a>
+            <a href="pretzel.html"><img src="img/eur/pretzel.jpg" class="card-img-top" alt="pretzel"></a>
             <div class="card-body">
               <p class="card-text">Pretzel</p>
             </div>
@@ -104,7 +131,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="waffle.php"><img src="img/eur/waffle.jpg" class="card-img-top" alt="waffle"></a>
+            <a href="waffle.html"><img src="img/eur/waffle.jpg" class="card-img-top" alt="waffle"></a>
             <div class="card-body">
               <p class="card-text">Waffle</p>
             </div>
@@ -112,7 +139,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="gelato.php"><img src="img/eur/gelato.jpg" class="card-img-top" alt="gelato"></a>
+            <a href="gelato.html"><img src="img/eur/gelato.jpg" class="card-img-top" alt="gelato"></a>
             <div class="card-body">
               <p class="card-text">Gelato</p>
             </div>
@@ -123,7 +150,7 @@
       <div class="row justify-content-center">
         <div class="col-md-4">
           <div class="card">
-            <a href="croissant.php"><img src="img/eur/croissant.jpg" class="card-img-top" alt="croissant"></a>
+            <a href="croissant.html"><img src="img/eur/croissant.jpg" class="card-img-top" alt="croissant"></a>
             <div class="card-body">
               <p class="card-text">Croissant</p>
             </div>
