--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <a class="nav-link" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#option" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html#option" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Resep
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="indonesian.php">Indonesian Cuisines</a></li>
-                    <li><a class="dropdown-item" href="european.php">European Cuisines</a></li>
+                    <li><a class="dropdown-item" href="indonesian.html">Indonesian Cuisines</a></li>
+                    <li><a class="dropdown-item" href="european.html">European Cuisines</a></li>
                 </ul>
                 </li>
                 <li class="nav-item">
@@ -101,7 +101,7 @@
       <div class="row justify-content-center">
         <div class="col-md-5">
           <div class="card">
-            <a href="indonesian.php"><img src="img/indonesian.jpg" class="card-img-top" alt="indonesian_cuisine"></a>
+            <a href="indonesian.html"><img src="img/indonesian.jpg" class="card-img-top" alt="indonesian_cuisine"></a>
             <div class="card-body">
               <p class="card-text">Indonesian Cuisine</p>
             </div>
@@ -109,7 +109,7 @@
         </div>
         <div class="col-md-5">
           <div class="card">
-            <a href="european.php"><img src="img/european.jpeg" class="card-img-top" alt="european_cuisine"></a>
+            <a href="european.html"><img src="img/european.jpeg" class="card-img-top" alt="european_cuisine"></a>
             <div class="card-body">
               <p class="card-text">European Cuisine</p>
             </div>
