--- a/indonesian.html
+++ b/indonesian.html
@@ -21,9 +21,36 @@
     <title>Indonesian Cuisines</title>
   </head>
   <body>
-    <?php
-      include('header.php');
-    ?>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+              <a class="navbar-brand" href="#">World Cuisine</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="index.html#about">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="index.html#option" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Resep
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="indonesian.html">Indonesian Cuisines</a></li>
+                      <li><a class="dropdown-item" href="european.html">European Cuisines</a></li>
+                  </ul>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="index.html#contact">Contact</a>
+                  </li>
+              </ul>
+              </div>
+          </div>
+    </nav>
 
     <div class="jumbotron jumbotron-fluid cek pt-5">
       <div class="container mt-5">  
@@ -42,7 +69,7 @@
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
-            <a href="rendang.php"><img src="img/idn/rendang.jpg" class="card-img-top" alt="rendang"></a>
+            <a href="rendang.html"><img src="img/idn/rendang.jpg" class="card-img-top" alt="rendang"></a>
             <div class="card-body">
               <p class="card-text">Rendang</p>
             </div>
@@ -50,7 +77,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="sate.php"><img src="img/idn/sate.jpg" class="card-img-top" alt="sate"></a>
+            <a href="sate.html"><img src="img/idn/sate.jpg" class="card-img-top" alt="sate"></a>
             <div class="card-body">
               <p class="card-text">Sate Ayam</p>
             </div>
@@ -58,7 +85,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="gado-gado.php"><img src="img/idn/gado-gado.jpg" class="card-img-top" alt="gado-gado"></a>
+            <a href="gado-gado.html"><img src="img/idn/gado-gado.jpg" class="card-img-top" alt="gado-gado"></a>
             <div class="card-body">
               <p class="card-text">Gado-gado</p>
             </div>
@@ -69,7 +96,7 @@
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
-            <a href="gudeg.php"><img src="img/idn/gudeg.jpg" class="card-img-top" alt="gudeg"></a>
+            <a href="gudeg.html"><img src="img/idn/gudeg.jpg" class="card-img-top" alt="gudeg"></a>
             <div class="card-body">
               <p class="card-text">Gudeg</p>
             </div>
@@ -77,7 +104,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="soto.php"><img src="img/idn/soto.jpg" class="card-img-top" alt="soto"></a>
+            <a href="soto.html"><img src="img/idn/soto.jpg" class="card-img-top" alt="soto"></a>
             <div class="card-body">
               <p class="card-text">Soto</p>
             </div>
@@ -85,7 +112,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="pempek.php"><img src="img/idn/pempek.jpg" class="card-img-top" alt="pempek"></a>
+            <a href="pempek.html"><img src="img/idn/pempek.jpg" class="card-img-top" alt="pempek"></a>
             <div class="card-body">
               <p class="card-text">Pempek</p>
             </div>
@@ -96,7 +123,7 @@
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
-            <a href="klepon.php"><img src="img/idn/klepon.jpg" class="card-img-top" alt="klepon"></a>
+            <a href="klepon.html"><img src="img/idn/klepon.jpg" class="card-img-top" alt="klepon"></a>
             <div class="card-body">
               <p class="card-text">Klepon</p>
             </div>
@@ -104,7 +131,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="nasi-kuning.php"><img src="img/idn/nasi-kuning.jpg" class="card-img-top" alt="nasi-kuning"></a>
+            <a href="nasi-kuning.html"><img src="img/idn/nasi-kuning.jpg" class="card-img-top" alt="nasi-kuning"></a>
             <div class="card-body">
               <p class="card-text">Nasi Kuning</p>
             </div>
@@ -112,7 +139,7 @@
         </div>
         <div class="col-md">
           <div class="card">
-            <a href="rawon.php"><img src="img/idn/rawon.jpg" class="card-img-top" alt="rawon"></a>
+            <a href="rawon.html"><img src="img/idn/rawon.jpg" class="card-img-top" alt="rawon"></a>
             <div class="card-body">
               <p class="card-text">Rawon</p>
             </div>
@@ -123,7 +150,7 @@
       <div class="row justify-content-center">
         <div class="col-md-4">
           <div class="card">
-            <a href="gulai.php"><img src="img/idn/gulai.jpeg" class="card-img-top" alt="gulai"></a>
+            <a href="gulai.html"><img src="img/idn/gulai.jpeg" class="card-img-top" alt="gulai"></a>
             <div class="card-body">
               <p class="card-text">Gulai</p>
             </div>
