--- a/waffle.html
+++ b/waffle.html
@@ -18,15 +18,42 @@
     <title>Waffle</title>
   </head>
   <body>
-    <?php
-      include('header.php');
-    ?>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+              <a class="navbar-brand" href="#">World Cuisine</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="index.html#about">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="index.html#option" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Resep
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="indonesian.html">Indonesian Cuisines</a></li>
+                      <li><a class="dropdown-item" href="european.html">European Cuisines</a></li>
+                  </ul>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="index.html#contact">Contact</a>
+                  </li>
+              </ul>
+              </div>
+          </div>
+    </nav>
 
     <div class="container pt-5 mt-4">
         <nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="index.html">Home</a></li>
-				<li class="breadcrumb-item"><a href="european.php">European Cuisines</a></li>
+				<li class="breadcrumb-item"><a href="european.html">European Cuisines</a></li>
 				<li class="breadcrumb-item active" aria-current="page">Waffle</li>
 			</ol>
 	    </nav>
